syntax = "proto3";

package api.email.v1;

option go_package = "api/email/v1;v1";

message EmailVerify {
    int64 id = 1;
    string user_id = 2;
    string email = 3;
    string secret_code = 4;
    bool is_used = 5;
}


message EmailVerifyRequest {
    string user_id = 1;
    string email = 2;
}